# template-v2-generation-test

backend/: .gitignore  api.py  elements.py  generate_presentation.py  generation_schema.py  layout_normalizer.py  llm_models.py  main.py  pptx_json_to_layouts.py  pptx_to_html.py  pptx_to_json.py  pyproject.toml  settings.py  slide_componenets.old.py  slide_layouts.old.py  template.py
backend/assets/: components.json  generated_presentation.json  layouts.json  pptx.json  presentation.json  schemas.json
frontend/: package.json
frontend/app/: globals.css  page.tsx
frontend/app/components-preview/: page.tsx
frontend/app/layout-preview/: page.tsx
frontend/app/templates/general(gemini-3-flash)/: components.json  layouts.json
frontend/app/templates/general(glm-4.7)/: layouts.json
frontend/app/templates/general(gpt-5.4)/: components.json  layouts.json
frontend/components/: ComponentRenderer.tsx  ComponentsPreview.tsx  ElementRenderer.tsx  LayoutPreviewClient.tsx  ScaledSlidePreview.tsx  SlideLayoutRenderer.tsx  SlideRenderer.tsx
frontend/lib/: templates.ts
frontend/types/: component.ts  elements.ts  layout.ts
